# universe

./: .gitignore  Cargo.toml
assets/: system.yaml  system_au.yaml  terra_au.yaml
src/: hud.rs  hud_egui.rs  lib.rs  main.rs  property.rs  ship.rs
